# baxter_hydra_teleop

./: .gitignore  CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
launch/: filter_pointcloud.launch  hydra_teleop.launch  kinect.launch  kinect_checkers_tf.launch  kinect_tf.launch  kinect_tfs.launch  tf.launch  transforms.launch
meshes/: README  hydra.stl
rviz/: kinect_only.rviz  teleop.rviz
scripts/: kinect_stuff  teleop.py
src/: teleop.py
src/baxter_hydra_teleop/: goal_transform.py  head_mover.py  ik_solver.py  limb_mover.py
src/baxter_hydra_teleop/vis/: vis.py
src/vis/: __init__.py  vis.py
